v11/fixtures/ast/errors/struct_functional_update_type/source.able
struct Point {
  x: i32
}

struct Vector {
  dx: i32
}

p := Point { x: 1 }
updated := Vector { ...p, dx: 5 }
